tests/paczka1/small_fuzzy/60860928.err
Error in line 3: QhS3FeuZy1 S238 26,9
Error in line 4: A361 A445 96,7
